# robo

install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robo_project_pkg/share/robo_project_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robo_project_pkg/share/robo_project_pkg/urdf/: three_dof_arm.urdf
log/: latest_build
project/log/: latest_version-check
project/src/my_robot_controller/: package.xml  pick_and_place_anim.py  setup.py
project/src/my_robot_description/: package.xml  setup.py
project/src/my_robot_description/launch/: simulation_launch.py
project/src/my_robot_description/models/three_dof_arm/: model.config  model.sdf
project/src/my_robot_description/urdf/: three_dof_arm.urdf
project/src/my_robot_description/worlds/: pick_place_world.sdf
project/src/scripts/: forward_kinematics.py  pick_and_place_anim.py
robo_project_pkg/: package.xml  setup.cfg  setup.py
robo_project_pkg/launch/: gz_launch.py
robo_project_pkg/urdf/: three_dof_arm.urdf
src/kinematics/: forward_kinematics.py  inverse_kinematics.py
src/scripts/: pick_and_place_anim.py  trajectory_sim.py
src/sim_scripts/: test_inverse_kinematics.py
worlds/: empty_world.sdf
